; ModuleID = '/home/carl/AnghaBench/libui/examples/drawtext/extr_main.c_appendWithAttribute.c'
source_filename = "/home/carl/AnghaBench/libui/examples/drawtext/extr_main.c_appendWithAttribute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@attrstr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32*)* @appendWithAttribute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @appendWithAttribute(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @attrstr, align 4
  %10 = call i64 @uiAttributedStringLen(i32 %9)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @strlen(i8* %12)
  %14 = add i64 %11, %13
  store i64 %14, i64* %8, align 8
  %15 = load i32, i32* @attrstr, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @uiAttributedStringAppendUnattributed(i32 %15, i8* %16)
  %18 = load i32, i32* @attrstr, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = call i32 @uiAttributedStringSetAttribute(i32 %18, i32* %19, i64 %20, i64 %21)
  %23 = load i32*, i32** %6, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %3
  %26 = load i32, i32* @attrstr, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i32 @uiAttributedStringSetAttribute(i32 %26, i32* %27, i64 %28, i64 %29)
  br label %31

31:                                               ; preds = %25, %3
  ret void
}

declare dso_local i64 @uiAttributedStringLen(i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @uiAttributedStringAppendUnattributed(i32, i8*) #1

declare dso_local i32 @uiAttributedStringSetAttribute(i32, i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
